# Chat-Application

./: .gitignore  CMakeLists.txt  Chat-Application.sln  DataBase.db  README.md
Chat Application/: CMakeLists.txt  Chat Application.cpp  Chat Application.h
Chat-Application/: Chat-Application.cpp  Chat-Application.pro  Chat-Application.pro.user.6df142a  Chat-Application.pro.user.d478106  Chat-Application.vcxproj  Chat-Application.vcxproj.filters  ChatInfo.cpp  ChatInfo.h  ChatInfo.ui  ChatItem.cpp  ChatItem.h  ChatItem.ui  ChatRoom.cpp  ChatRoom.h  ChatRoom.ui  Chats.cpp  Chats.h  Chats.ui  Data.cpp  Data.h  DataBase.db  Datetime.cpp  Datetime.h  Message.cpp  Message.h  Message.ui  MsgStatus.cpp  MsgStatus.h  MsgStatus.ui  MyConstants.cpp  MyConstants.h  MyMessage.cpp  MyMessage.h  MyMessage.ui  Recources.qrc  StoryTime.cpp  StoryTime.h  StoryTime.ui  StoryWidget.h  StoryWidget.ui  (+37 more)
Chat-Application/Debug/: Chat-Application.exe.recipe  Chat-Application.ilk  vc142.idb  vc143.idb
Chat-Application/Debug/Chat-Application.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chat-Application.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Chat-Application/x64/Debug/: Chat-Application.exe.recipe  vc143.idb
build-Chat-Application-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: DataBase.db  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Chat-Application-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Chat-Application-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
(+1047 files in other folders)
